removed patients w/o gender or admissionsheight

--- a/notebooks/loadRawData_eICU.ipynb
+++ b/notebooks/loadRawData_eICU.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:05.242162Z",
-     "start_time": "2020-06-06T23:05:05.238759Z"
+     "end_time": "2020-06-07T13:08:03.404674Z",
+     "start_time": "2020-06-07T13:08:03.401199Z"
     }
    },
    "outputs": [],
@@ -25,8 +25,14 @@
     "    # Alive after 48 hours of ICU admission\n",
     "    # Known discharge status\n",
     "    # NOT admitted with VTE\n",
-    "write_filtered03 = 1 # set to 1 if you want to write files for the patients who meet the following criteria:\n",
+    "write_filtered03 = 0 # set to 1 if you want to write files for the patients who meet the following criteria:\n",
     "    # have age and admissionweight\n",
+    "    # over 18\n",
+    "    # Alive after 24 hours of ICU admission\n",
+    "    # Known discharge status\n",
+    "    # NOT admitted with VTE\n",
+    "write_filtered04 = 1 # set to 1 if you want to write files for the patients who meet the following criteria:\n",
+    "    # have age, admissionweight, admissionheight, and ethnicity\n",
     "    # over 18\n",
     "    # Alive after 24 hours of ICU admission\n",
     "    # Known discharge status\n",
@@ -40,8 +46,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:05.801844Z",
-     "start_time": "2020-06-06T23:05:05.245010Z"
+     "end_time": "2020-06-07T13:08:03.764663Z",
+     "start_time": "2020-06-07T13:08:03.406953Z"
     }
    },
    "outputs": [],
@@ -64,8 +70,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:05.806186Z",
-     "start_time": "2020-06-06T23:05:05.803532Z"
+     "end_time": "2020-06-07T13:08:03.769665Z",
+     "start_time": "2020-06-07T13:08:03.766860Z"
     }
    },
    "outputs": [],
@@ -86,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Remove patients with age=NaN or admissionweight=NaN"
+    "## Remove patients with age=NaN, admissionweight=NaN, admssionheight=NaN, gender=NaN, ethnicity=NaN"
    ]
   },
   {
@@ -94,8 +100,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:06.557833Z",
-     "start_time": "2020-06-06T23:05:05.808129Z"
+     "end_time": "2020-06-07T13:08:04.587679Z",
+     "start_time": "2020-06-07T13:08:03.771952Z"
     }
    },
    "outputs": [
@@ -104,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "200859 u patientunitidstays read from raw csv\n",
-      "184117 patientunitstayids with age & admissionweight not na\n"
+      "180865 patientunitstayids with fields not NaN\n"
      ]
     }
    ],
@@ -122,9 +128,11 @@
     "\n",
     "# Remove patients with age and/or admissionweight NaN\n",
     "u_ptunitstayid_ageweight_na = patient_raw[(patient_raw['age'].isnull()) | \\\n",
-    "                       (patient_raw['admissionweight'].isnull())]['patientunitstayid'].unique()\n",
+    "                       (patient_raw['admissionweight'].isnull()) | \\\n",
+    "                       (patient_raw['admissionheight'].isnull()) | \\\n",
+    "                       (patient_raw['ethnicity'].isnull())]['patientunitstayid'].unique()\n",
     "patient = patient_raw[~patient_raw['patientunitstayid'].isin(u_ptunitstayid_ageweight_na)]\n",
-    "print(str(patient.shape[0]) + ' patientunitstayids with age & admissionweight not na')"
+    "print(str(patient.shape[0]) + ' patientunitstayids with fields not NaN')"
    ]
   },
   {
@@ -144,8 +152,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:06.727963Z",
-     "start_time": "2020-06-06T23:05:06.559565Z"
+     "end_time": "2020-06-07T13:08:04.757354Z",
+     "start_time": "2020-06-07T13:08:04.589203Z"
     },
     "scrolled": true
    },
@@ -154,11 +162,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6458 patientunitstayids with age > 89. Changed to 91\n",
-      "969 patients <=18 yo -- to remove\n",
-      "183148 u patientunitidstays remaining. \n",
+      "6339 patientunitstayids with age > 89. Changed to 91\n",
+      "924 patients <=18 yo -- to remove\n",
+      "179941 u patientunitidstays remaining. \n",
       "\t age >18, have admissionweight\n",
-      "patientUnitStayIdKeep has 183148 elements\n"
+      "patientUnitStayIdKeep has 179941 elements\n"
      ]
     }
    ],
@@ -198,8 +206,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:08.361066Z",
-     "start_time": "2020-06-06T23:05:06.731935Z"
+     "end_time": "2020-06-07T13:08:06.302950Z",
+     "start_time": "2020-06-07T13:08:04.759173Z"
     }
    },
    "outputs": [
@@ -265,8 +273,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:09.100585Z",
-     "start_time": "2020-06-06T23:05:08.364304Z"
+     "end_time": "2020-06-07T13:08:06.969079Z",
+     "start_time": "2020-06-07T13:08:06.305425Z"
     },
     "scrolled": true
    },
@@ -276,8 +284,8 @@
      "output_type": "stream",
      "text": [
       "['Expired' 'Alive' nan]\n",
-      "28 patientunitstayids with nan unitdischargestatus\n",
-      "ptunitstayidG18_remove currently has 17739 u patientunitstayids\n"
+      "26 patientunitstayids with nan unitdischargestatus\n",
+      "ptunitstayidG18_remove currently has 20944 u patientunitstayids\n"
      ]
     }
    ],
@@ -299,8 +307,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:09.175172Z",
-     "start_time": "2020-06-06T23:05:09.102101Z"
+     "end_time": "2020-06-07T13:08:07.039410Z",
+     "start_time": "2020-06-07T13:08:06.970709Z"
     },
     "scrolled": true
    },
@@ -309,11 +317,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3278 patientunitstayids died within 24 hours of admission to ICU\n",
-      "ptunitstayidG18_remove currently has 17739 u patientunitstayids\n",
-      "3278 patientunitstayids will be removed because of NaN dischargestatus or died within 24 hours of ICU admission\n",
-      "21017 total patients SO FAR have been removed\n",
-      "179842 patientunitstayids remaining\n"
+      "3075 patientunitstayids died within 24 hours of admission to ICU\n",
+      "ptunitstayidG18_remove currently has 20944 u patientunitstayids\n",
+      "3075 patientunitstayids will be removed because of NaN dischargestatus or died within 24 hours of ICU admission\n",
+      "24019 total patients SO FAR have been removed\n",
+      "176840 patientunitstayids remaining\n"
      ]
     }
    ],
@@ -358,8 +366,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:09.787527Z",
-     "start_time": "2020-06-06T23:05:09.177247Z"
+     "end_time": "2020-06-07T13:08:07.633123Z",
+     "start_time": "2020-06-07T13:08:07.041007Z"
     }
    },
    "outputs": [
@@ -382,8 +390,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:09.805012Z",
-     "start_time": "2020-06-06T23:05:09.789246Z"
+     "end_time": "2020-06-07T13:08:07.650059Z",
+     "start_time": "2020-06-07T13:08:07.634760Z"
     },
     "scrolled": true
    },
@@ -848,8 +856,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:10.182410Z",
-     "start_time": "2020-06-06T23:05:09.806734Z"
+     "end_time": "2020-06-07T13:08:08.006415Z",
+     "start_time": "2020-06-07T13:08:07.651559Z"
     },
     "scrolled": true
    },
@@ -858,13 +866,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "592405 admissiondx entries for patients >18, and with ok discharge\n",
-      "167985 unique patientunitstayids in admissionsdx\n",
-      "167985 unique patientunitstayids who meet previous critera and have admissionsdx\n",
-      "11857 u patientunitstayids that dont have admissiondx\n",
-      "32874 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n",
-      "167985 u patientunitidstays remaining in admissiondx\n",
-      "167985 u patientunitidstays remaining in patient\n"
+      "582215 admissiondx entries for patients >18, and with ok discharge\n",
+      "165129 unique patientunitstayids in admissionsdx\n",
+      "165129 unique patientunitstayids who meet previous critera and have admissionsdx\n",
+      "11711 u patientunitstayids that dont have admissiondx\n",
+      "35730 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n",
+      "165129 u patientunitidstays remaining in admissiondx\n",
+      "165129 u patientunitidstays remaining in patient\n"
      ]
     }
    ],
@@ -918,8 +926,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:10.556982Z",
-     "start_time": "2020-06-06T23:05:10.184371Z"
+     "end_time": "2020-06-07T13:08:08.351486Z",
+     "start_time": "2020-06-07T13:08:08.012124Z"
     }
    },
    "outputs": [
@@ -927,7 +935,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "474 patientunitstayids were diagnosed with \"Thrombosis, vascular\" upon admission\n"
+      "461 patientunitstayids were diagnosed with \"Thrombosis, vascular\" upon admission\n"
      ]
     }
    ],
@@ -964,8 +972,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:10.561032Z",
-     "start_time": "2020-06-06T23:05:10.558735Z"
+     "end_time": "2020-06-07T13:08:08.362795Z",
+     "start_time": "2020-06-07T13:08:08.356545Z"
     }
    },
    "outputs": [],
@@ -979,8 +987,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:10.565156Z",
-     "start_time": "2020-06-06T23:05:10.562748Z"
+     "end_time": "2020-06-07T13:08:08.367025Z",
+     "start_time": "2020-06-07T13:08:08.364320Z"
     }
    },
    "outputs": [],
@@ -995,8 +1003,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:10.570225Z",
-     "start_time": "2020-06-06T23:05:10.566646Z"
+     "end_time": "2020-06-07T13:08:08.371691Z",
+     "start_time": "2020-06-07T13:08:08.368405Z"
     }
    },
    "outputs": [],
@@ -1014,8 +1022,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:10.573824Z",
-     "start_time": "2020-06-06T23:05:10.571580Z"
+     "end_time": "2020-06-07T13:08:08.375470Z",
+     "start_time": "2020-06-07T13:08:08.373190Z"
     }
    },
    "outputs": [],
@@ -1036,8 +1044,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:11.946531Z",
-     "start_time": "2020-06-06T23:05:10.575047Z"
+     "end_time": "2020-06-07T13:08:09.727216Z",
+     "start_time": "2020-06-07T13:08:08.376815Z"
     }
    },
    "outputs": [
@@ -1045,9 +1053,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1612 u patientunitstayids with PE at admission that will be removed\n",
-      "165899 u patientunitstayids remaining in \"patient\"\n",
-      "165899 u patientunitstayids remaining in \"admissiondx\"\n"
+      "1586 u patientunitstayids with PE at admission that will be removed\n",
+      "163082 u patientunitstayids remaining in \"patient\"\n",
+      "163082 u patientunitstayids remaining in \"admissiondx\"\n"
      ]
     }
    ],
@@ -1081,8 +1089,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:14.176056Z",
-     "start_time": "2020-06-06T23:05:11.948131Z"
+     "end_time": "2020-06-07T13:08:11.891615Z",
+     "start_time": "2020-06-07T13:08:09.728874Z"
     }
    },
    "outputs": [
@@ -1090,8 +1098,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After removing patientunitstayids that were removed from \"patient.csv\" and \"admitdx.csv\",159567 u patientunitstayids \n",
-      " and 2576098 rows are left in diagnosis.csv\n",
+      "After removing patientunitstayids that were removed from \"patient.csv\" and \"admitdx.csv\",156849 u patientunitstayids \n",
+      " and 2554031 rows are left in diagnosis.csv\n",
       "['415.1', '415.10', '415.11', '415.13', '415.19', '451.0', '451.1', '451.10', '451.11', '451.19', '451.2', '451.20', '451.81', '451.89', '451.9', '451.90', '453.1', '453.10', '453.2', '453.20', '453.4', '453.40', '453.41', '453.42', '453.6', '453.60', '453.8', '453.80', '453.89', '453.9', '453.90']\n"
      ]
     }
@@ -1125,8 +1133,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:37.197393Z",
-     "start_time": "2020-06-06T23:05:14.177662Z"
+     "end_time": "2020-06-07T13:08:35.444847Z",
+     "start_time": "2020-06-07T13:08:11.893304Z"
     },
     "scrolled": true
    },
@@ -1166,9 +1174,9 @@
       "453.89\n",
       "453.9\n",
       "453.90\n",
-      "1549 unique patientunitstayids with ICD9 and VTE\n",
-      "626 unique patientunitstayids with NULL icd9 AND DVT\n",
-      "2028 u patientunitidstays with VTE diagnosed ever\n"
+      "1545 unique patientunitstayids with ICD9 and VTE\n",
+      "622 unique patientunitstayids with NULL icd9 AND DVT\n",
+      "2021 u patientunitidstays with VTE diagnosed ever\n"
      ]
     }
    ],
@@ -1211,14 +1219,14 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:48.384194Z",
-     "start_time": "2020-06-06T23:05:37.199101Z"
+     "end_time": "2020-06-07T13:08:46.669708Z",
+     "start_time": "2020-06-07T13:08:35.446482Z"
     }
    },
    "outputs": [],
    "source": [
-    "if write_filtered03 == 1:\n",
-    "    dir_write_filtered = '/Users/rachellehorwitz/Documents/ViTalErt/data/filtered03/'\n",
+    "if write_filtered04 == 1:\n",
+    "    dir_write_filtered = '/Users/rachellehorwitz/Documents/ViTalErt/data/filtered04/'\n",
     "    ptunitstayid_vte_series.to_csv(dir_write_filtered + 'pos_ptunitstayid.csv', index=False)\n",
     "    patient.to_csv(dir_write_filtered + 'patient.csv', index=False)\n",
     "    diagnosis.to_csv(dir_write_filtered + 'diagnosis.csv', index=False)\n",
@@ -1230,15 +1238,15 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:48.395431Z",
-     "start_time": "2020-06-06T23:05:48.385532Z"
+     "end_time": "2020-06-07T13:08:46.681660Z",
+     "start_time": "2020-06-07T13:08:46.671710Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "165899"
+       "163082"
       ]
      },
      "execution_count": 21,
@@ -1248,31 +1256,6 @@
    ],
    "source": [
     "patient['patientunitstayid'].unique().shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-06T23:05:48.401157Z",
-     "start_time": "2020-06-06T23:05:48.397607Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "182130"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(184117 - 1987)"
    ]
   },
   {
