--- a/notebooks/loadRawData_eICU.ipynb
+++ b/notebooks/loadRawData_eICU.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:03.404674Z",
-     "start_time": "2020-06-07T13:08:03.401199Z"
+     "end_time": "2020-06-07T13:23:03.299958Z",
+     "start_time": "2020-06-07T13:23:03.296474Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:03.764663Z",
-     "start_time": "2020-06-07T13:08:03.406953Z"
+     "end_time": "2020-06-07T13:23:03.784423Z",
+     "start_time": "2020-06-07T13:23:03.302159Z"
     }
    },
    "outputs": [],
@@ -70,8 +70,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:03.769665Z",
-     "start_time": "2020-06-07T13:08:03.766860Z"
+     "end_time": "2020-06-07T13:23:03.790154Z",
+     "start_time": "2020-06-07T13:23:03.786944Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:04.587679Z",
-     "start_time": "2020-06-07T13:08:03.771952Z"
+     "end_time": "2020-06-07T13:23:04.695637Z",
+     "start_time": "2020-06-07T13:23:03.793120Z"
     }
    },
    "outputs": [
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "200859 u patientunitidstays read from raw csv\n",
-      "180865 patientunitstayids with fields not NaN\n"
+      "180840 patientunitstayids with fields not NaN\n"
      ]
     }
    ],
@@ -126,11 +126,13 @@
     "patient_raw = pd.read_csv(dir_data_raw + 'patient.csv')\n",
     "print(str(patient_raw['patientunitstayid'].unique().shape[0]) + ' u patientunitidstays read from raw csv')\n",
     "\n",
-    "# Remove patients with age and/or admissionweight NaN\n",
+    "# Remove patients with age and/or admissionweight NaN. Future: include patients with \"other\" gender\n",
     "u_ptunitstayid_ageweight_na = patient_raw[(patient_raw['age'].isnull()) | \\\n",
     "                       (patient_raw['admissionweight'].isnull()) | \\\n",
     "                       (patient_raw['admissionheight'].isnull()) | \\\n",
-    "                       (patient_raw['ethnicity'].isnull())]['patientunitstayid'].unique()\n",
+    "                       (patient_raw['ethnicity'].isnull())| \\\n",
+    "                        (patient_raw['gender']=='Unknown') |\\\n",
+    "                        (patient_raw['gender']=='Other')]['patientunitstayid'].unique()\n",
     "patient = patient_raw[~patient_raw['patientunitstayid'].isin(u_ptunitstayid_ageweight_na)]\n",
     "print(str(patient.shape[0]) + ' patientunitstayids with fields not NaN')"
    ]
@@ -152,8 +154,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:04.757354Z",
-     "start_time": "2020-06-07T13:08:04.589203Z"
+     "end_time": "2020-06-07T13:23:04.863879Z",
+     "start_time": "2020-06-07T13:23:04.697294Z"
     },
     "scrolled": true
    },
@@ -162,11 +164,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6339 patientunitstayids with age > 89. Changed to 91\n",
+      "6325 patientunitstayids with age > 89. Changed to 91\n",
       "924 patients <=18 yo -- to remove\n",
-      "179941 u patientunitidstays remaining. \n",
+      "179916 u patientunitidstays remaining. \n",
       "\t age >18, have admissionweight\n",
-      "patientUnitStayIdKeep has 179941 elements\n"
+      "patientUnitStayIdKeep has 179916 elements\n"
      ]
     }
    ],
@@ -206,8 +208,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:06.302950Z",
-     "start_time": "2020-06-07T13:08:04.759173Z"
+     "end_time": "2020-06-07T13:23:06.452131Z",
+     "start_time": "2020-06-07T13:23:04.865713Z"
     }
    },
    "outputs": [
@@ -273,8 +275,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:06.969079Z",
-     "start_time": "2020-06-07T13:08:06.305425Z"
+     "end_time": "2020-06-07T13:23:07.184571Z",
+     "start_time": "2020-06-07T13:23:06.453744Z"
     },
     "scrolled": true
    },
@@ -285,7 +287,7 @@
      "text": [
       "['Expired' 'Alive' nan]\n",
       "26 patientunitstayids with nan unitdischargestatus\n",
-      "ptunitstayidG18_remove currently has 20944 u patientunitstayids\n"
+      "ptunitstayidG18_remove currently has 20969 u patientunitstayids\n"
      ]
     }
    ],
@@ -307,8 +309,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:07.039410Z",
-     "start_time": "2020-06-07T13:08:06.970709Z"
+     "end_time": "2020-06-07T13:23:07.260813Z",
+     "start_time": "2020-06-07T13:23:07.186215Z"
     },
     "scrolled": true
    },
@@ -317,11 +319,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3075 patientunitstayids died within 24 hours of admission to ICU\n",
-      "ptunitstayidG18_remove currently has 20944 u patientunitstayids\n",
-      "3075 patientunitstayids will be removed because of NaN dischargestatus or died within 24 hours of ICU admission\n",
-      "24019 total patients SO FAR have been removed\n",
-      "176840 patientunitstayids remaining\n"
+      "3072 patientunitstayids died within 24 hours of admission to ICU\n",
+      "ptunitstayidG18_remove currently has 20969 u patientunitstayids\n",
+      "3072 patientunitstayids will be removed because of NaN dischargestatus or died within 24 hours of ICU admission\n",
+      "24041 total patients SO FAR have been removed\n",
+      "176818 patientunitstayids remaining\n"
      ]
     }
    ],
@@ -366,8 +368,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:07.633123Z",
-     "start_time": "2020-06-07T13:08:07.041007Z"
+     "end_time": "2020-06-07T13:23:07.867696Z",
+     "start_time": "2020-06-07T13:23:07.262547Z"
     }
    },
    "outputs": [
@@ -390,8 +392,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:07.650059Z",
-     "start_time": "2020-06-07T13:08:07.634760Z"
+     "end_time": "2020-06-07T13:23:07.884497Z",
+     "start_time": "2020-06-07T13:23:07.869311Z"
     },
     "scrolled": true
    },
@@ -856,8 +858,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:08.006415Z",
-     "start_time": "2020-06-07T13:08:07.651559Z"
+     "end_time": "2020-06-07T13:23:08.299591Z",
+     "start_time": "2020-06-07T13:23:07.885995Z"
     },
     "scrolled": true
    },
@@ -866,13 +868,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "582215 admissiondx entries for patients >18, and with ok discharge\n",
-      "165129 unique patientunitstayids in admissionsdx\n",
-      "165129 unique patientunitstayids who meet previous critera and have admissionsdx\n",
-      "11711 u patientunitstayids that dont have admissiondx\n",
-      "35730 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n",
-      "165129 u patientunitidstays remaining in admissiondx\n",
-      "165129 u patientunitidstays remaining in patient\n"
+      "582149 admissiondx entries for patients >18, and with ok discharge\n",
+      "165108 unique patientunitstayids in admissionsdx\n",
+      "165108 unique patientunitstayids who meet previous critera and have admissionsdx\n",
+      "11710 u patientunitstayids that dont have admissiondx\n",
+      "35751 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n",
+      "165108 u patientunitidstays remaining in admissiondx\n",
+      "165108 u patientunitidstays remaining in patient\n"
      ]
     }
    ],
@@ -926,8 +928,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:08.351486Z",
-     "start_time": "2020-06-07T13:08:08.012124Z"
+     "end_time": "2020-06-07T13:23:08.692010Z",
+     "start_time": "2020-06-07T13:23:08.305915Z"
     }
    },
    "outputs": [
@@ -972,8 +974,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:08.362795Z",
-     "start_time": "2020-06-07T13:08:08.356545Z"
+     "end_time": "2020-06-07T13:23:08.704465Z",
+     "start_time": "2020-06-07T13:23:08.697738Z"
     }
    },
    "outputs": [],
@@ -987,8 +989,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:08.367025Z",
-     "start_time": "2020-06-07T13:08:08.364320Z"
+     "end_time": "2020-06-07T13:23:08.709305Z",
+     "start_time": "2020-06-07T13:23:08.706553Z"
     }
    },
    "outputs": [],
@@ -1003,8 +1005,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:08.371691Z",
-     "start_time": "2020-06-07T13:08:08.368405Z"
+     "end_time": "2020-06-07T13:23:08.714825Z",
+     "start_time": "2020-06-07T13:23:08.711065Z"
     }
    },
    "outputs": [],
@@ -1022,8 +1024,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:08.375470Z",
-     "start_time": "2020-06-07T13:08:08.373190Z"
+     "end_time": "2020-06-07T13:23:08.718819Z",
+     "start_time": "2020-06-07T13:23:08.716363Z"
     }
    },
    "outputs": [],
@@ -1044,8 +1046,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:09.727216Z",
-     "start_time": "2020-06-07T13:08:08.376815Z"
+     "end_time": "2020-06-07T13:23:10.088590Z",
+     "start_time": "2020-06-07T13:23:08.720495Z"
     }
    },
    "outputs": [
@@ -1053,9 +1055,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1586 u patientunitstayids with PE at admission that will be removed\n",
-      "163082 u patientunitstayids remaining in \"patient\"\n",
-      "163082 u patientunitstayids remaining in \"admissiondx\"\n"
+      "1585 u patientunitstayids with PE at admission that will be removed\n",
+      "163062 u patientunitstayids remaining in \"patient\"\n",
+      "163062 u patientunitstayids remaining in \"admissiondx\"\n"
      ]
     }
    ],
@@ -1089,8 +1091,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:11.891615Z",
-     "start_time": "2020-06-07T13:08:09.728874Z"
+     "end_time": "2020-06-07T13:23:12.264381Z",
+     "start_time": "2020-06-07T13:23:10.090213Z"
     }
    },
    "outputs": [
@@ -1098,8 +1100,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After removing patientunitstayids that were removed from \"patient.csv\" and \"admitdx.csv\",156849 u patientunitstayids \n",
-      " and 2554031 rows are left in diagnosis.csv\n",
+      "After removing patientunitstayids that were removed from \"patient.csv\" and \"admitdx.csv\",156829 u patientunitstayids \n",
+      " and 2553400 rows are left in diagnosis.csv\n",
       "['415.1', '415.10', '415.11', '415.13', '415.19', '451.0', '451.1', '451.10', '451.11', '451.19', '451.2', '451.20', '451.81', '451.89', '451.9', '451.90', '453.1', '453.10', '453.2', '453.20', '453.4', '453.40', '453.41', '453.42', '453.6', '453.60', '453.8', '453.80', '453.89', '453.9', '453.90']\n"
      ]
     }
@@ -1130,11 +1132,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-08T16:13:55.146465Z",
+     "start_time": "2020-06-08T16:13:55.134998Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>admissiondxid</th>\n",
+       "      <th>patientunitstayid</th>\n",
+       "      <th>admitdxenteredoffset</th>\n",
+       "      <th>admitdxpath</th>\n",
+       "      <th>admitdxname</th>\n",
+       "      <th>admitdxtext</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8023778</td>\n",
+       "      <td>2900217</td>\n",
+       "      <td>62</td>\n",
+       "      <td>admission diagnosis|Operative Organ Systems|Organ System|Cardiovascular</td>\n",
+       "      <td>Cardiovascular</td>\n",
+       "      <td>Cardiovascular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8023777</td>\n",
+       "      <td>2900217</td>\n",
+       "      <td>62</td>\n",
+       "      <td>admission diagnosis|Was the patient admitted from the O.R. or went to the O.R. within 4 hours of admission?|Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8023779</td>\n",
+       "      <td>2900217</td>\n",
+       "      <td>62</td>\n",
+       "      <td>admission diagnosis|All Diagnosis|Operative|Diagnosis|Cardiovascular|Aortic and Mitral valve replacement</td>\n",
+       "      <td>Aortic and Mitral valve replacement</td>\n",
+       "      <td>Aortic and Mitral valve replacement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7929318</td>\n",
+       "      <td>2900240</td>\n",
+       "      <td>53</td>\n",
+       "      <td>admission diagnosis|Non-operative Organ Systems|Organ System|Gastrointestinal</td>\n",
+       "      <td>Gastrointestinal</td>\n",
+       "      <td>Gastrointestinal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7929317</td>\n",
+       "      <td>2900240</td>\n",
+       "      <td>53</td>\n",
+       "      <td>admission diagnosis|Was the patient admitted from the O.R. or went to the O.R. within 4 hours of admission?|No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   admissiondxid  patientunitstayid  admitdxenteredoffset  \\\n",
+       "0        8023778            2900217                    62   \n",
+       "1        8023777            2900217                    62   \n",
+       "2        8023779            2900217                    62   \n",
+       "3        7929318            2900240                    53   \n",
+       "4        7929317            2900240                    53   \n",
+       "\n",
+       "                                                                                                       admitdxpath  \\\n",
+       "0                                          admission diagnosis|Operative Organ Systems|Organ System|Cardiovascular   \n",
+       "1  admission diagnosis|Was the patient admitted from the O.R. or went to the O.R. within 4 hours of admission?|Yes   \n",
+       "2         admission diagnosis|All Diagnosis|Operative|Diagnosis|Cardiovascular|Aortic and Mitral valve replacement   \n",
+       "3                                    admission diagnosis|Non-operative Organ Systems|Organ System|Gastrointestinal   \n",
+       "4   admission diagnosis|Was the patient admitted from the O.R. or went to the O.R. within 4 hours of admission?|No   \n",
+       "\n",
+       "                           admitdxname                          admitdxtext  \n",
+       "0                       Cardiovascular                       Cardiovascular  \n",
+       "1                                  Yes                                  Yes  \n",
+       "2  Aortic and Mitral valve replacement  Aortic and Mitral valve replacement  \n",
+       "3                     Gastrointestinal                     Gastrointestinal  \n",
+       "4                                   No                                   No  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "admissiondx.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:35.444847Z",
-     "start_time": "2020-06-07T13:08:11.893304Z"
+     "end_time": "2020-06-07T13:23:35.273449Z",
+     "start_time": "2020-06-07T13:23:12.266018Z"
     },
     "scrolled": true
    },
@@ -1219,8 +1342,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:46.669708Z",
-     "start_time": "2020-06-07T13:08:35.446482Z"
+     "end_time": "2020-06-07T13:23:46.427433Z",
+     "start_time": "2020-06-07T13:23:35.275226Z"
     }
    },
    "outputs": [],
@@ -1238,15 +1361,15 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T13:08:46.681660Z",
-     "start_time": "2020-06-07T13:08:46.671710Z"
+     "end_time": "2020-06-07T13:23:46.441397Z",
+     "start_time": "2020-06-07T13:23:46.429338Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "163082"
+       "163062"
       ]
      },
      "execution_count": 21,
@@ -2151,7 +2274,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "277px"
    },
    "toc_section_display": true,
    "toc_window_display": true
