used pandas_profiling in EDA.ipynb to create EDA reports

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:36.661706Z",
-     "start_time": "2020-06-09T13:11:34.493188Z"
+     "end_time": "2020-06-09T20:21:06.355022Z",
+     "start_time": "2020-06-09T20:21:03.907217Z"
     }
    },
    "outputs": [],
@@ -66,8 +66,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:41.919117Z",
-     "start_time": "2020-06-09T13:11:36.663729Z"
+     "end_time": "2020-06-09T20:21:11.605147Z",
+     "start_time": "2020-06-09T20:21:06.356902Z"
     }
    },
    "outputs": [],
@@ -127,8 +127,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:41.931059Z",
-     "start_time": "2020-06-09T13:11:41.921263Z"
+     "end_time": "2020-06-09T20:21:11.615666Z",
+     "start_time": "2020-06-09T20:21:11.607347Z"
     }
    },
    "outputs": [
@@ -163,8 +163,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:42.410226Z",
-     "start_time": "2020-06-09T13:11:41.932867Z"
+     "end_time": "2020-06-09T20:21:12.096795Z",
+     "start_time": "2020-06-09T20:21:11.617955Z"
     }
    },
    "outputs": [
@@ -205,8 +205,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:42.415741Z",
-     "start_time": "2020-06-09T13:11:42.411957Z"
+     "end_time": "2020-06-09T20:21:12.103003Z",
+     "start_time": "2020-06-09T20:21:12.098687Z"
     }
    },
    "outputs": [
@@ -241,8 +241,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:42.445827Z",
-     "start_time": "2020-06-09T13:11:42.418811Z"
+     "end_time": "2020-06-09T20:21:12.131201Z",
+     "start_time": "2020-06-09T20:21:12.105988Z"
     }
    },
    "outputs": [
@@ -635,8 +635,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:42.457138Z",
-     "start_time": "2020-06-09T13:11:42.448094Z"
+     "end_time": "2020-06-09T20:21:12.141443Z",
+     "start_time": "2020-06-09T20:21:12.133452Z"
     }
    },
    "outputs": [
@@ -769,8 +769,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:43.462482Z",
-     "start_time": "2020-06-09T13:11:42.458936Z"
+     "end_time": "2020-06-09T20:21:13.101630Z",
+     "start_time": "2020-06-09T20:21:12.142857Z"
     }
    },
    "outputs": [
@@ -1554,7 +1554,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='cdce6203-3e01-46e2-9092-96b6bbc4d71b'></div>"
+       "<div id='de739fa1-5c64-4713-b85c-396b62410838'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2343,7 +2343,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='400a50a5-0efd-46e6-ab77-cb15a9321372'></div>"
+       "<div id='81835730-db2b-42e4-9105-746c18af5bad'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3132,7 +3132,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='24d5215a-99d8-4ddd-b444-506ca72b0a28'></div>"
+       "<div id='a75a1128-eb64-400d-9166-92eeb50a5760'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3921,7 +3921,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='7b49b3db-2a16-41ad-ba32-ca0c7a4dc48a'></div>"
+       "<div id='ab68b8b9-2787-4dab-a510-36a8450ee546'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3980,8 +3980,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:43.475696Z",
-     "start_time": "2020-06-09T13:11:43.465538Z"
+     "end_time": "2020-06-09T20:21:13.116886Z",
+     "start_time": "2020-06-09T20:21:13.103868Z"
     }
    },
    "outputs": [],
@@ -4005,9 +4005,10 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:44.153692Z",
-     "start_time": "2020-06-09T13:11:43.477220Z"
-    }
+     "end_time": "2020-06-09T20:21:13.780019Z",
+     "start_time": "2020-06-09T20:21:13.119054Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -4421,8 +4422,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:44.159942Z",
-     "start_time": "2020-06-09T13:11:44.155497Z"
+     "end_time": "2020-06-09T20:21:13.784754Z",
+     "start_time": "2020-06-09T20:21:13.781337Z"
     },
     "scrolled": true
    },
@@ -4447,8 +4448,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:44.166609Z",
-     "start_time": "2020-06-09T13:11:44.162485Z"
+     "end_time": "2020-06-09T20:21:13.790026Z",
+     "start_time": "2020-06-09T20:21:13.786180Z"
     }
    },
    "outputs": [
@@ -4472,8 +4473,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:44.300559Z",
-     "start_time": "2020-06-09T13:11:44.168215Z"
+     "end_time": "2020-06-09T20:21:13.919219Z",
+     "start_time": "2020-06-09T20:21:13.791444Z"
     }
    },
    "outputs": [],
@@ -4486,8 +4487,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:44.306218Z",
-     "start_time": "2020-06-09T13:11:44.302245Z"
+     "end_time": "2020-06-09T20:21:13.925052Z",
+     "start_time": "2020-06-09T20:21:13.921092Z"
     }
    },
    "outputs": [
@@ -4511,8 +4512,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:45.666465Z",
-     "start_time": "2020-06-09T13:11:44.308525Z"
+     "end_time": "2020-06-09T20:21:15.257254Z",
+     "start_time": "2020-06-09T20:21:13.927817Z"
     }
    },
    "outputs": [],
@@ -4525,8 +4526,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:45.715121Z",
-     "start_time": "2020-06-09T13:11:45.667892Z"
+     "end_time": "2020-06-09T20:21:15.305075Z",
+     "start_time": "2020-06-09T20:21:15.258852Z"
     }
    },
    "outputs": [
@@ -4550,8 +4551,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:45.720999Z",
-     "start_time": "2020-06-09T13:11:45.716941Z"
+     "end_time": "2020-06-09T20:21:15.310709Z",
+     "start_time": "2020-06-09T20:21:15.306942Z"
     }
    },
    "outputs": [
@@ -4575,8 +4576,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:45.808021Z",
-     "start_time": "2020-06-09T13:11:45.726714Z"
+     "end_time": "2020-06-09T20:21:15.395101Z",
+     "start_time": "2020-06-09T20:21:15.317368Z"
     }
    },
    "outputs": [],
@@ -4589,8 +4590,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:45.815126Z",
-     "start_time": "2020-06-09T13:11:45.812207Z"
+     "end_time": "2020-06-09T20:21:15.401686Z",
+     "start_time": "2020-06-09T20:21:15.399024Z"
     },
     "scrolled": true
    },
@@ -4604,8 +4605,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-09T13:11:45.819745Z",
-     "start_time": "2020-06-09T13:11:45.817016Z"
+     "end_time": "2020-06-09T20:21:15.406077Z",
+     "start_time": "2020-06-09T20:21:15.403261Z"
     }
    },
    "outputs": [],
