saved patientuinistayid in csv file output by loadSavedVitalPeriodic_Hr.ipynb

--- a/notebooks/loadSavedVitalPeriodic_HR.ipynb
+++ b/notebooks/loadSavedVitalPeriodic_HR.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:49:49.833341Z",
-     "start_time": "2020-06-10T16:49:49.159236Z"
+     "end_time": "2020-06-10T17:26:04.122702Z",
+     "start_time": "2020-06-10T17:26:02.980548Z"
     }
    },
    "outputs": [],
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:38:37.235946Z",
-     "start_time": "2020-06-10T16:37:49.296858Z"
+     "end_time": "2020-06-10T17:26:36.195635Z",
+     "start_time": "2020-06-10T17:26:05.719637Z"
     }
    },
    "outputs": [],
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:39:05.311699Z",
-     "start_time": "2020-06-10T16:39:05.302174Z"
+     "end_time": "2020-06-10T17:26:38.473562Z",
+     "start_time": "2020-06-10T17:26:38.464476Z"
     }
    },
    "outputs": [
@@ -116,7 +116,7 @@
        "4         37377404             141168               2039       92.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:41:46.166114Z",
-     "start_time": "2020-06-10T16:41:36.763233Z"
+     "end_time": "2020-06-10T17:26:54.107503Z",
+     "start_time": "2020-06-10T17:26:43.866161Z"
     }
    },
    "outputs": [],
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:41:50.310359Z",
-     "start_time": "2020-06-10T16:41:50.303994Z"
+     "end_time": "2020-06-10T17:27:03.760346Z",
+     "start_time": "2020-06-10T17:27:03.756952Z"
     }
    },
    "outputs": [
@@ -155,7 +155,7 @@
        "(133600433, 4)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:43:08.613463Z",
-     "start_time": "2020-06-10T16:42:59.566293Z"
+     "end_time": "2020-06-10T17:27:12.492006Z",
+     "start_time": "2020-06-10T17:27:05.946698Z"
     }
    },
    "outputs": [],
@@ -231,11 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:46:08.453974Z",
-     "start_time": "2020-06-10T16:46:07.739189Z"
+     "end_time": "2020-06-10T17:27:16.037959Z",
+     "start_time": "2020-06-10T17:27:15.026530Z"
     }
    },
    "outputs": [],
@@ -246,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:46:36.527404Z",
-     "start_time": "2020-06-10T16:46:36.523884Z"
+     "end_time": "2020-06-10T17:27:17.547865Z",
+     "start_time": "2020-06-10T17:27:17.543731Z"
     }
    },
    "outputs": [
@@ -260,13 +260,44 @@
        "158784"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hr_first24.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-10T17:27:24.240172Z",
+     "start_time": "2020-06-10T17:27:24.232668Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patientunitstayid\n",
+       "141168    125.052830\n",
+       "141194     86.860627\n",
+       "141197     97.307692\n",
+       "141203     91.543554\n",
+       "141208     77.817460\n",
+       "Name: heartrate, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hr_first24.head()"
    ]
   },
   {
@@ -370,17 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T16:52:08.491478Z",
-     "start_time": "2020-06-10T16:52:08.151121Z"
+     "end_time": "2020-06-10T17:27:49.991322Z",
+     "start_time": "2020-06-10T17:27:49.567530Z"
     }
    },
    "outputs": [],
    "source": [
-    "hr_first24.to_csv('/Users/rachellehorwitz/Documents/ViTalErt/data/filtered05/vitalPeriodic_heartrate_first24.csv', \\\n",
-    "                 index=False)"
+    "hr_first24.to_csv('/Users/rachellehorwitz/Documents/ViTalErt/data/filtered05/vitalPeriodic_heartrate_first24.csv')"
    ]
   }
  ],
